--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">TaveConnect</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="kakao_redirection_scheme">kakao7d6af00ceade6023ddf611602f60df60</string>
+    <string name="kakao_native_app_key">7d6af00ceade6023ddf611602f60df60</string>
 </resources>
