--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="kakao_redirection_scheme">kakao7d6af00ceade6023ddf611602f60df60</string>
     <string name="kakao_native_app_key">7d6af00ceade6023ddf611602f60df60</string>
+    <!--<string name="kakao_native_app_key">a1b7fed0130bcae85ec5e5822f097ad0</string>-->
+
 </resources>
